Fixed an issue where the navbar was not showing up on map page, restructred map.html, edits to script.js, edits to styles.css

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -29,6 +29,8 @@ body {
     font-weight: bold;
     font-size: small;
     text-decoration: none;
+
+    z-index: 1000;
 }
 .navbar .logo {
     display: flex;
